--- a/BOOKLIB_API/appsettings.json
+++ b/BOOKLIB_API/appsettings.json
@@ -13,7 +13,10 @@
   "AllowedHosts": "*",
   "JWT": {
     "ValidAudience": "User",
-    "ValidIssuer": "http://localhost:27056",
+    "ValidIssuer": "http://localhost:44339",
     "Secret": "3d147a849b6b4d99b0691585dc8f13cc"
-  }
+  },
+  "Codes": {
+    "RoleRequest": "41541"
+  } 
 }
