--- a/BOOKLIB_API/appsettings.json
+++ b/BOOKLIB_API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-KHKOCPL\\SQLEXPRESS;Database=TailorApp;Trusted_Connection=True;MultipleActiveResultSets=True",
+    "DefaultConnection": "Server=DESKTOP-LVMI1C8;Database=BookLibAPP;Trusted_Connection=True;MultipleActiveResultSets=True",
     "DesktopConnection": "Server=DESKTOP-MNIHJE4\\SQLEXPRESS;Database=BookLibAPP;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
